--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.8.0",
     "bootstrap": "4.6.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "1.5.1",
     "react-cookie": "4.0.3",
@@ -52,6 +53,5 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/DevJessParker/can-of-books-front/issues"
-  },
-  "homepage": "."
+  }
 }
